# satalign

./: .gitignore  404.html  CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: mkdocs.yml
docs/: index.md  modules.md
docs/js/: copybutton.js
docs/style/: style.css
png/: image_1.tif
satalign/: __init__.py  ecc.py  lgm.py  main.py  pcc.py  utils.py
satalign/lightglue/: viz2d.py
satsync/: __init__.py  ecc.py  lgm.py  main.py  pcc.py  utils.py
search/: search_index.json
tests/: test_foo.py
