[tool.poetry]
name = "satsync"
version = "0.0.3"
description = "A python package to align satellite images."
authors = ["Cesar Aybar <fcesar.aybar@uv.es>"]
repository = "https://github.com/csaybar/satsync"
documentation = "https://csaybar.github.io/satsync/"
readme = "README.md"
packages = [
  {include = "satsync"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.25.2"
xarray = ">=2023.7.0"
rasterio = ">=1.3.10"
scikit-image = ">=0.19.3"
opencv-python = ">=4.8.0.76"
pandas = ">=2.0.3"
kornia = ">=0.7.2"
torch = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["satsync"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["satsync"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
